--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview",
      "start": "vite preview"
   },
-  "dependencies": {
+   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
@@ -30,6 +31,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
+ 
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
